// Copyright 2021 CloudWeGo Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";
package grpc_auth;
option go_package = "./grpc_gen/auth";

message RegisterRequest {
    string username = 1;
    string password = 2;
}

message RegisterResponse {
    int32 status_code = 1;
    optional string status_msg = 2;
    int64 user_id = 3;
    string token = 4;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    int32 status_code = 1;
    optional string status_msg = 2;
    int64 user_id = 3;
    string token = 4;
}

service AuthService {
    rpc Register (RegisterRequest) returns (RegisterResponse) {}
    rpc Login (LoginRequest) returns (LoginResponse) {}

}